chore: add test

--- a/lib/lang/en.json
+++ b/lib/lang/en.json
@@ -2,5 +2,9 @@
   "pizza": "pizza",
   "records": {
     "contracts": "Contracts"
+  },
+  "distance": {
+    "milesAway_one": "x",
+    "milesAway_other": "y"
   }
 }
